# adventofcode_2025

./: .gitignore  LICENSE  README.md
day01/: day01.cabal  day01.hs  input.txt
day04/: day04.cabal  day04.hs  input.txt
day05/: day05.cabal  day05.hs  input.txt
day06/: day06.cabal  day06.hs  input.txt
day08/: UnionFind.hs  day08.cabal  day08.hs  input.txt
day09/: day09.cabal  day09.hs  input.txt
day10/: day10.cabal  day10.hs  input.txt
day11/: day11.cabal  day11.hs  input.txt
day12/: day12.cabal  day12.hs  input.txt
